fix(header): adjust tablet media queries to prevent layout issues

--- a/styles/css/home/vtex.flex-layout.css
+++ b/styles/css/home/vtex.flex-layout.css
@@ -82,7 +82,7 @@
 
 
 /*------------tablet---------------*/
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 640px) and (max-width: 1024px) {
   .flexRow--header-container-menu-desktop {
     overflow: hidden;
 
